[fix]Search results list has too much gap between results

--- a/frappe/public/css/list.css
+++ b/frappe/public/css/list.css
@@ -1,7 +1,7 @@
 .result,
 .no-result,
 .freeze {
-  min-height: calc(100vh - 284px);
+  min-height: max-content;
 }
 .freeze-row .level-left,
 .freeze-row .level-right,
